--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "homepage": "https://cobalt-ui.pages.dev",
   "scripts": {
     "prebuild": "del-cli \"**/dist\"",
-    "build": "npm run build:core && npm run build:packages",
+    "build": "run-s build:utils build:core build:packages",
     "build:core": "cd packages/core && npm run build",
     "build:examples": "run-p build:examples:*",
     "build:examples:adobe": "cd examples/adobe && npm run build:tokens",
@@ -23,7 +23,8 @@
     "build:examples:ibm": "cd examples/ibm && npm run build:tokens",
     "build:examples:salesforce": "cd examples/salesforce && npm run build:tokens",
     "build:examples:shopify": "cd examples/shopify && npm run build:tokens",
-    "build:packages": "tsc -b packages/utils packages/cli packages/plugin-css packages/plugin-json packages/plugin-sass packages/plugin-ts",
+    "build:packages": "tsc -b packages/cli packages/plugin-css packages/plugin-json packages/plugin-sass packages/plugin-ts",
+    "build:utils": "tsc -b packages/utils",
     "cf:build": "pnpm i && npm run build && cd www && npm run build",
     "changeset": "changeset",
     "dev": "run-p dev:*",
