--- a/www/package.json
+++ b/www/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "run-s build:*",
+    "build": "npm run build:tokens && npm run build:static",
     "build:tokens": "co build",
     "build:static": "astro build",
     "sync": "co sync",
@@ -18,10 +18,10 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "file:../packages/cli/",
-    "@cobalt-ui/core": "file:../packages/core/",
-    "@cobalt-ui/plugin-sass": "file:../packages/plugin-sass/",
-    "astro": "^1.0.8",
+    "@cobalt-ui/cli": "^0.5.1",
+    "@cobalt-ui/core": "^0.6.1",
+    "@cobalt-ui/plugin-sass": "^0.6.2",
+    "astro": "^1.1.1",
     "npm-run-all": "^4.1.5",
     "sass": "^1.54.5",
     "vite": "^3.0.9"
