--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -14,6 +14,8 @@
   "homepage": "https://cobalt-ui.pages.dev",
   "license": "MIT",
   "type": "module",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "dev": "tsc -w",
