--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -6,7 +6,7 @@
     "W3C",
     "JSON"
   ],
-  "version": "0.6.1",
+  "version": "0.6.2",
   "author": {
     "name": "Drew Powers",
     "email": "drew@pow.rs"
@@ -29,8 +29,8 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@cobalt-ui/core": "workspace:^0.6.3",
-    "@cobalt-ui/utils": "workspace:^0.5.0",
+    "@cobalt-ui/core": "^0.6.4",
+    "@cobalt-ui/utils": "^0.5.1",
     "better-color-tools": "^0.9.1",
     "chokidar": "^3.5.3",
     "dotenv": "^16.0.3",
