--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -31,17 +31,17 @@
   "dependencies": {
     "@cobalt-ui/core": "^0.7.1",
     "@cobalt-ui/utils": "^0.5.2",
+    "@types/csso": "^5.0.0",
     "better-color-tools": "^0.9.1",
     "chokidar": "^3.5.3",
     "dotenv": "^16.0.3",
     "number-precision": "^1.6.0",
     "piscina": "^3.2.0",
-    "svgo": "^2.8.0",
+    "svgo": "^3.0.1",
     "undici": "^5.12.0"
   },
   "devDependencies": {
-    "@types/svgo": "^2.6.4",
-    "figma-api": "^1.10.1",
-    "vitest": "^0.24.3"
+    "figma-api": "^1.11.0",
+    "vitest": "^0.25.2"
   }
 }
