--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,11 +27,12 @@
   },
   "dependencies": {
     "@cobalt-ui/utils": "^0.5.2",
-    "better-color-tools": "^0.9.1"
+    "@types/csso": "^5.0.0",
+    "better-color-tools": "^0.9.1",
+    "svgo": "^3.0.1"
   },
   "devDependencies": {
-    "@types/node": "^17.0.45",
-    "@types/svgo": "^2.6.4",
-    "vitest": "^0.24.3"
+    "@types/node": "^18.11.9",
+    "vitest": "^0.25.2"
   }
 }
