--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -26,15 +26,15 @@
   },
   "dependencies": {
     "@cobalt-ui/utils": "^0.5.2",
+    "@types/csso": "^5.0.0",
     "better-color-tools": "^0.9.1",
     "mime": "^3.0.0",
-    "svgo": "^2.8.0"
+    "svgo": "^3.0.1"
   },
   "devDependencies": {
     "@cobalt-ui/cli": "^0.7.1",
     "@cobalt-ui/core": "^0.7.1",
     "@types/mime": "^2.0.3",
-    "@types/svgo": "^2.6.4",
-    "vitest": "^0.24.3"
+    "vitest": "^0.25.2"
   }
 }
