--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -27,14 +27,14 @@
   "dependencies": {
     "@cobalt-ui/plugin-css": "*",
     "@cobalt-ui/utils": "^0.5.2",
+    "@types/csso": "^5.0.0",
     "mime": "^3.0.0",
-    "svgo": "^2.8.0"
+    "svgo": "^3.0.1"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "^0.7.0",
+    "@cobalt-ui/cli": "^0.7.1",
     "@cobalt-ui/core": "^0.7.1",
     "@types/mime": "^2.0.3",
-    "@types/svgo": "^2.6.4",
-    "vitest": "^0.24.3"
+    "vitest": "^0.25.2"
   }
 }
