--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -38,7 +38,8 @@
     "number-precision": "^1.6.0",
     "piscina": "^3.2.0",
     "svgo": "^3.0.1",
-    "undici": "^5.12.0"
+    "undici": "^5.12.0",
+    "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
     "figma-api": "^1.11.0",
