--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -25,16 +25,16 @@
     "@cobalt-ui/cli": "*"
   },
   "dependencies": {
-    "@cobalt-ui/plugin-css": "*",
+    "@cobalt-ui/plugin-css": "^1.1.4",
     "@cobalt-ui/utils": "^0.5.2",
     "@types/csso": "^5.0.0",
     "mime": "^3.0.0",
-    "svgo": "^3.0.1"
+    "svgo": "^3.0.2"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "^0.7.1",
+    "@cobalt-ui/cli": "^0.7.2",
     "@cobalt-ui/core": "^0.7.2",
     "@types/mime": "^2.0.3",
-    "vitest": "^0.25.2"
+    "vitest": "^0.28.3"
   }
 }
