--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cobalt-ui/core",
   "description": "CLI for using the W3C design token format",
-  "version": "0.7.4",
+  "version": "1.0.0",
   "author": {
     "name": "Drew Powers",
     "email": "drew@pow.rs"
@@ -27,7 +27,7 @@
     "test:ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@cobalt-ui/utils": "^0.5.3",
+    "@cobalt-ui/utils": "1.0.0",
     "@types/csso": "^5.0.0",
     "better-color-tools": "^0.10.2",
     "svgo": "^3.0.2"
