--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,13 @@
 {
   "printWidth": 180,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "overrides": [
+    {
+      "files": ["*.md"],
+      "options": {
+        "singleQuote": false
+      }
+    }
+  ]
 }
