--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -13,10 +13,10 @@
     "sb": "sb dev -p 9009"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^8.1.9",
-    "@storybook/react": "^8.1.9",
-    "@storybook/react-vite": "^8.1.9",
-    "@storybook/test": "^8.1.9",
+    "@storybook/addon-essentials": "^8.1.11",
+    "@storybook/react": "^8.1.11",
+    "@storybook/react-vite": "^8.1.11",
+    "@storybook/test": "^8.1.11",
     "@terrazzo/fonts": "workspace:^",
     "@terrazzo/icons": "workspace:^",
     "@terrazzo/react-color-picker": "workspace:^",
@@ -24,13 +24,19 @@
     "@terrazzo/tokens": "workspace:^",
     "@terrazzo/use-color": "workspace:^",
     "@types/culori": "^2.1.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "culori": "^4.0.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "storybook": "^8.1.9",
-    "vite": "^5.3.1"
+    "react": "19.0.0-rc-e02baf6c92-20240627",
+    "react-dom": "19.0.0-rc-e02baf6c92-20240627",
+    "storybook": "^8.1.11",
+    "types-react": "19.0.0-alpha.3",
+    "types-react-dom": "19.0.0-alpha.3",
+    "vite": "^5.3.2"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc"
   }
 }
