--- a/www/package.json
+++ b/www/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "build": "astro build",
     "dev": "astro dev",
+    "format": "biome format --write src",
     "lint": "pnpm run \"/^lint:.*/\"",
-    "lint:js": "biome check .",
-    "lint:css": "stylelint .",
+    "lint:js": "biome check src",
+    "lint:css": "stylelint src",
     "preview": "astro preview"
   },
   "dependencies": {
@@ -19,26 +20,30 @@
     "@terrazzo/token-lab": "workspace:^",
     "@terrazzo/tokens": "workspace:^",
     "@terrazzo/use-color": "workspace:^",
-    "algoliasearch": "^4.23.3",
+    "algoliasearch": "^4.24.0",
     "nanoid": "^5.0.7",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-instantsearch": "^7.11.1"
+    "react": "19.0.0-rc-58af67a8f8-20240628",
+    "react-dom": "19.0.0-rc-58af67a8f8-20240628",
+    "react-instantsearch": "^7.11.4"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^3.1.1",
+    "@astrojs/mdx": "^3.1.2",
     "@astrojs/react": "3.6.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "astro": "^4.10.3",
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc",
+    "astro": "^4.11.3",
     "json5": "^2.2.3",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-directive": "^3.0.0",
-    "typescript": "^5.4.5",
+    "typescript": "^5.5.2",
     "unist-util-visit": "^5.0.0",
-    "vite": "^5.3.1",
+    "vite": "^5.3.2",
     "vite-plugin-sass-dts": "^1.3.22",
     "vite-tsconfig-paths": "^4.3.2"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc"
   }
 }
