--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           run_install: true
       - run: pnpm run build
-      - run: pnpm exec changesets pre alpha
+      - run: pnpm exec changeset pre alpha
       - uses: changesets/action@v1
         with:
           version: pnpm run version
