--- a/package.json
+++ b/package.json
@@ -18,25 +18,37 @@
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.18.2",
-    "@biomejs/biome": "^2.2.6",
+    "@biomejs/biome": "^2.3.0",
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.7",
-    "@types/node": "^22.18.10",
+    "@swc/core": "catalog:",
+    "@swc/core-darwin-arm64": "catalog:",
+    "@swc/core-darwin-x64": "catalog:",
+    "@swc/core-linux-arm-gnueabihf": "catalog:",
+    "@swc/core-linux-arm64-gnu": "catalog:",
+    "@swc/core-linux-arm64-musl": "catalog:",
+    "@swc/core-linux-x64-gnu": "catalog:",
+    "@swc/core-linux-x64-musl": "catalog:",
+    "@swc/core-win32-arm64-msvc": "catalog:",
+    "@swc/core-win32-ia32-msvc": "catalog:",
+    "@swc/core-win32-x64-msvc": "catalog:",
+    "@types/node": "^22.18.12",
     "@vitest/browser": "catalog:",
-    "cspell": "^9.2.1",
+    "@vitest/browser-playwright": "catalog:",
+    "cspell": "^9.2.2",
     "execa": "^9.6.0",
-    "playwright": "^1.56.0",
+    "playwright": "catalog:",
     "prettier": "^3.6.2",
-    "rolldown": "1.0.0-beta.41",
-    "rolldown-plugin-dts": "^0.16.11",
+    "rolldown": "1.0.0-beta.44",
+    "rolldown-plugin-dts": "^0.16.12",
     "strip-ansi": "^7.1.2",
     "stylelint": "^16.25.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
     "turbo": "^2.5.8",
     "typescript": "^5.9.3",
-    "vite": "^7.1.10",
-    "vitest": "^3.2.4"
+    "vite": "catalog:",
+    "vitest": "catalog:"
   },
   "pnpm": {
     "patchedDependencies": {
