--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,24 +4,45 @@ packages:
   - '!packages/**/test/**'
 
 catalog:
-  '@humanwhocodes/momoa': ^3.3.9
+  '@humanwhocodes/momoa': ^3.3.10
+  '@swc/core': 1.13.19
+  '@swc/core-darwin-arm64': 1.13.19
+  '@swc/core-darwin-x64': 1.13.19
+  '@swc/core-linux-arm-gnueabihf': 1.13.19
+  '@swc/core-linux-arm64-gnu': 1.13.19
+  '@swc/core-linux-arm64-musl': 1.13.19
+  '@swc/core-linux-x64-gnu': 1.13.19
+  '@swc/core-linux-x64-musl': 1.13.19
+  '@swc/core-win32-arm64-msvc': 1.13.19
+  '@swc/core-win32-ia32-msvc': 1.13.19
+  '@swc/core-win32-x64-msvc': 1.13.19
   '@types/culori': ^4.0.1
   '@types/react': ^19.2.2
   '@types/react-dom': ^19.2.2
-  '@vitejs/plugin-react-swc': ^4.1.0
-  '@vitest/browser': ^3.2.4
+  '@vitejs/plugin-react-swc': ^4.2.0
+  '@vitest/browser': ^4.0.3
+  '@vitest/browser-playwright': ^4.0.3
+  '@vitest/coverage-v8': ^4.0.3
   culori: ^4.0.2
   dtcg-examples: ^0.3.4
   playwright: ^1.55.0
   react: ^19.2.0
   react-dom: ^19.2.0
   vite: ^7.1.9
-  vitest: ^3.2.4
+  vitest: ^4.0.3
   yaml-to-momoa: 0.0.6
 
 onlyBuiltDependencies:
   - '@biomejs/biome'
   - '@swc/core'
+  - '@swc/core-darwin-arm64'
+  - '@swc/core-darwin-x64'
+  - '@swc/core-linux-arm64-gnu'
+  - '@swc/core-linux-arm-gnueabihf'
+  - '@swc/core-linux-x64-gnu'
+  - '@swc/core-linux-x64-musl'
+  - '@swc/core-win32-arm64-msvc'
+  - '@swc/core-win32-x64-msvc'
   - esbuild
   - sharp
 
