--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -28,8 +28,8 @@ catalog:
   playwright: ^1.55.0
   react: ^19.2.0
   react-dom: ^19.2.0
-  vite: ^7.1.9
-  vitest: ^4.0.3
+  vite: 7.1.12
+  vitest: 4.0.3
   yaml-to-momoa: 0.0.6
 
 onlyBuiltDependencies:
