--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -14,8 +14,8 @@
     "sb": "storybook dev -p 9009"
   },
   "devDependencies": {
-    "@storybook/addon-docs": "^9.1.16",
-    "@storybook/react-vite": "^9.1.16",
+    "@storybook/addon-docs": "^10.0.1",
+    "@storybook/react-vite": "^10.0.1",
     "@terrazzo/fonts": "workspace:^",
     "@terrazzo/icons": "workspace:^",
     "@terrazzo/react-color-picker": "workspace:^",
@@ -26,9 +26,10 @@
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@vitejs/plugin-react-swc": "catalog:",
+    "@vitest/coverage-v8": "catalog:",
     "culori": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
-    "storybook": "^9.1.16"
+    "storybook": "^10.0.1"
   }
 }
