--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -48,6 +48,7 @@
     "@types/babel__code-frame": "^7.0.6",
     "@types/culori": "catalog:",
     "culori": "catalog:",
+    "fast-deep-equal": "^3.1.3",
     "merge-anything": "^5.1.7",
     "picocolors": "^1.1.1",
     "scule": "^1.3.0",
