--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,19 @@ jobs:
           run_install: true
       - run: pnpm exec playwright install
       - run: pnpm test
+  test-node-20:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+      - uses: actions/setup-node@v6
+        with:
+          node-version: 20
+      - uses: pnpm/action-setup@v4
+        with:
+          run_install: true
+      - run: pnpm exec playwright install
+      - run: pnpm run build
+      - run: pnpm --filter @terrazzo/cli run test
   test-macos:
     runs-on: macos-latest
     steps:
