--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -60,6 +60,8 @@
     "meriyah": "^6.1.4",
     "mime": "^4.1.0",
     "picocolors": "^1.1.1",
+    "vite": ">=7.0.0",
+    "vite-node": ">=5.0.0",
     "yaml-to-momoa": "catalog:"
   },
   "devDependencies": {
@@ -76,7 +78,6 @@
     "@swc/core-win32-x64-msvc": "catalog:",
     "@vitejs/plugin-react-swc": "catalog:",
     "react": "catalog:",
-    "react-dom": "catalog:",
-    "vite": "catalog:"
+    "react-dom": "catalog:"
   }
 }
