--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -60,8 +60,8 @@
     "meriyah": "^6.1.4",
     "mime": "^4.1.0",
     "picocolors": "^1.1.1",
-    "vite": ">=7.0.0",
-    "vite-node": ">=5.0.0",
+    "vite": "^7.2.2",
+    "vite-node": "^5.2.0",
     "yaml-to-momoa": "catalog:"
   },
   "devDependencies": {
