--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -60,7 +60,7 @@
     "meriyah": "^6.1.4",
     "mime": "^4.1.0",
     "picocolors": "^1.1.1",
-    "vite": "^7.2.2",
+    "vite": "catalog:",
     "vite-node": "^5.2.0",
     "yaml-to-momoa": "catalog:"
   },
