--- a/packages/json-schema-tools/package.json
+++ b/packages/json-schema-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terrazzo/json-schema-tools",
-  "version": "0.1.0",
+  "version": "0.1.0-alpha.0",
   "description": "Bundle JSON Schema documents and tools for resolving $refs.",
   "type": "module",
   "keywords": [
