--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@vitest/browser-playwright": "catalog:",
     "cspell": "^9.4.0",
     "execa": "^9.6.1",
+    "merge-anything": "^5.1.7",
     "playwright": "catalog:",
     "prettier": "^3.7.4",
     "rolldown": "1.0.0-beta.51",
