--- a/packages/json-schema-tools/package.json
+++ b/packages/json-schema-tools/package.json
@@ -41,13 +41,17 @@
     "test": "vitest run"
   },
   "peerDependencies": {
-    "@humanwhocodes/momoa": "^3.0.0"
+    "@humanwhocodes/momoa": "^3.0.0",
+    "yaml-to-momoa": "catalog:"
   },
-  "dependencies": {
-    "@humanwhocodes/momoa": "catalog:"
+  "peerDependenciesMeta": {
+    "yaml-to-momoa": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@apidevtools/json-schema-ref-parser": "^11.9.3",
+    "@humanwhocodes/momoa": "catalog:",
     "yaml-to-momoa": "catalog:"
   }
 }
